--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,17 +1,15 @@
 # =============================================================================
-# CD Pipeline - Continuous Deployment
+# CD Pipeline - Continuous Deployment to Google Kubernetes Engine (GKE)
 # =============================================================================
-# This workflow deploys the application to Kubernetes after CI passes.
+# This workflow deploys the application to GKE after CI passes.
 #
 # STAGES:
-# 1. Pull image from DockerHub
-# 2. Update Kubernetes deployment
-# 3. Wait for rollout
-# 4. Verify deployment health
-# 5. (Optional) Run DAST scan
-#
-# NOTE: This pipeline is designed for LOCAL Kubernetes (Docker Desktop).
-# For production, you would configure kubectl to connect to your cloud cluster.
+# 1. Authenticate with Google Cloud
+# 2. Configure kubectl for GKE
+# 3. Update deployment with new image
+# 4. Apply Kubernetes manifests
+# 5. Wait for rollout and verify
+# 6. Run DAST scan
 # =============================================================================
 
 name: CD Pipeline
@@ -42,16 +40,19 @@ on:
 # =============================================================================
 env:
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/task-api
+  GKE_CLUSTER: task-api-cluster-devops
+  GKE_REGION: us-central1
+  GCP_PROJECT_ID: striped-buckeye-484911-r7
 
 # =============================================================================
 # JOBS
 # =============================================================================
 jobs:
   # ---------------------------------------------------------------------------
-  # JOB: Deploy to Kubernetes
+  # JOB: Deploy to GKE
   # ---------------------------------------------------------------------------
   deploy:
-    name: Deploy to Kubernetes
+    name: Deploy to GKE
     runs-on: ubuntu-latest
     # Only run if CI was successful (or manual trigger)
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
@@ -65,158 +66,183 @@ jobs:
         uses: actions/checkout@v4
 
       # -----------------------------------------------------------------------
-      # STAGE 2: Set image tag
-      # Purpose: Determine which image version to deploy
+      # STAGE 2: Authenticate with Google Cloud
+      # Purpose: Allow GitHub Actions to access GKE
+      # -----------------------------------------------------------------------
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GKE_SA_KEY }}
+
+      # -----------------------------------------------------------------------
+      # STAGE 3: Setup Google Cloud SDK
+      # Purpose: Install gcloud CLI
+      # -----------------------------------------------------------------------
+      - name: Setup Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.GCP_PROJECT_ID }}
+
+      # -----------------------------------------------------------------------
+      # STAGE 4: Install GKE auth plugin and configure kubectl
+      # Purpose: Connect kubectl to GKE cluster
+      # -----------------------------------------------------------------------
+      - name: Configure kubectl for GKE
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet
+          gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} \
+            --region ${{ env.GKE_REGION }} \
+            --project ${{ env.GCP_PROJECT_ID }}
+
+      # -----------------------------------------------------------------------
+      # STAGE 5: Update deployment manifest with image tag
+      # Purpose: Use correct Docker image
       # -----------------------------------------------------------------------
       - name: Set image tag
         id: image
         run: |
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "tag=${{ github.event.inputs.image_tag || 'latest' }}" >> $GITHUB_OUTPUT
+            TAG="${{ github.event.inputs.image_tag }}"
           else
-            echo "tag=latest" >> $GITHUB_OUTPUT
+            TAG="latest"
           fi
-          echo "Deploying image: ${{ env.DOCKER_IMAGE }}:${{ steps.image.outputs.tag || 'latest' }}"
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "Using image: ${{ env.DOCKER_IMAGE }}:$TAG"
 
       # -----------------------------------------------------------------------
-      # STAGE 3: Update deployment manifest with correct image
-      # Purpose: Replace placeholder with actual DockerHub image
+      # STAGE 6: Deploy to GKE
+      # Purpose: Apply Kubernetes manifests
       # -----------------------------------------------------------------------
-      - name: Update deployment manifest
+      - name: Deploy to GKE
         run: |
-          sed -i "s|DOCKERHUB_USERNAME/task-api:latest|${{ env.DOCKER_IMAGE }}:${{ steps.image.outputs.tag || 'latest' }}|g" k8s/deployment.yaml
-          echo "Updated deployment.yaml:"
-          cat k8s/deployment.yaml
+          echo "Deploying to GKE cluster: ${{ env.GKE_CLUSTER }}"
+
+          # Apply manifests
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
+
+          # Force rollout with new image
+          kubectl set image deployment/task-api \
+            task-api=${{ env.DOCKER_IMAGE }}:${{ steps.image.outputs.tag }}
 
       # -----------------------------------------------------------------------
-      # STAGE 4: Setup kubectl (for cloud deployment)
-      # Purpose: Configure kubectl to connect to Kubernetes cluster
-      # NOTE: For local Docker Desktop, you would run kubectl locally instead
+      # STAGE 7: Wait for rollout to complete
+      # Purpose: Ensure deployment is successful
       # -----------------------------------------------------------------------
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.28.0'
+      - name: Wait for rollout
+        run: |
+          echo "Waiting for deployment rollout..."
+          kubectl rollout status deployment/task-api --timeout=120s
 
       # -----------------------------------------------------------------------
-      # For GitHub Actions to deploy to a real cluster, you need to configure
-      # cluster access. This example shows the pattern - you would add your
-      # cluster's kubeconfig as a secret.
+      # STAGE 8: Verify deployment
+      # Purpose: Check pods and service are running
       # -----------------------------------------------------------------------
-      # - name: Configure kubectl
-      #   run: |
-      #     echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > kubeconfig
-      #     export KUBECONFIG=kubeconfig
-
-      # -----------------------------------------------------------------------
-      # STAGE 5: Display deployment info (simulation for local cluster)
-      # Purpose: Show what would be deployed
-      # -----------------------------------------------------------------------
-      - name: Display deployment configuration
+      - name: Verify deployment
         run: |
           echo "============================================="
-          echo "DEPLOYMENT CONFIGURATION"
+          echo "DEPLOYMENT STATUS"
           echo "============================================="
-          echo "Image: ${{ env.DOCKER_IMAGE }}:${{ steps.image.outputs.tag || 'latest' }}"
           echo ""
-          echo "Deployment manifest:"
-          echo "---------------------------------------------"
-          cat k8s/deployment.yaml
+          echo "Pods:"
+          kubectl get pods -l app=task-api
           echo ""
-          echo "---------------------------------------------"
-          echo "Service manifest:"
-          echo "---------------------------------------------"
-          cat k8s/service.yaml
+          echo "Service:"
+          kubectl get svc task-api-service
+          echo ""
+          EXTERNAL_IP=$(kubectl get svc task-api-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "External IP: $EXTERNAL_IP"
+          echo ""
           echo "============================================="
 
       # -----------------------------------------------------------------------
-      # STAGE 6: Validate Kubernetes manifests
-      # Purpose: Check YAML syntax before applying
+      # STAGE 9: Health check
+      # Purpose: Verify application is responding
       # -----------------------------------------------------------------------
-      - name: Validate Kubernetes manifests
+      - name: Health check
         run: |
-          echo "Validating Kubernetes manifests..."
-          kubectl apply --dry-run=client -f k8s/deployment.yaml
-          kubectl apply --dry-run=client -f k8s/service.yaml
-          echo "✅ Manifests are valid!"
+          EXTERNAL_IP=$(kubectl get svc task-api-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "Testing health endpoint: http://$EXTERNAL_IP/health"
+
+          # Wait for external IP and test
+          for i in {1..10}; do
+            response=$(curl -s -o /dev/null -w "%{http_code}" http://$EXTERNAL_IP/health 2>/dev/null || echo "000")
+            if [ "$response" == "200" ]; then
+              echo "✅ Health check passed!"
+              curl -s http://$EXTERNAL_IP/health
+              exit 0
+            fi
+            echo "Attempt $i: HTTP $response - waiting..."
+            sleep 10
+          done
+
+          echo "❌ Health check failed after 10 attempts"
+          exit 1
 
       # -----------------------------------------------------------------------
-      # STAGE 7: Upload manifests as artifacts
-      # Purpose: Make manifests available for manual deployment
+      # STAGE 10: Output deployment URL
+      # Purpose: Show where the application is accessible
       # -----------------------------------------------------------------------
-      - name: Upload deployment artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: k8s-manifests
-          path: k8s/
-
-      # -----------------------------------------------------------------------
-      # STAGE 8: Deployment instructions
-      # Purpose: Provide instructions for local deployment
-      # -----------------------------------------------------------------------
-      - name: Deployment instructions
+      - name: Deployment summary
         run: |
+          EXTERNAL_IP=$(kubectl get svc task-api-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
           echo "============================================="
-          echo "LOCAL DEPLOYMENT INSTRUCTIONS"
+          echo "🎉 DEPLOYMENT SUCCESSFUL!"
           echo "============================================="
           echo ""
-          echo "To deploy to your local Kubernetes cluster:"
-          echo ""
-          echo "1. Download the artifacts from this workflow run"
-          echo "2. Or run these commands locally:"
-          echo ""
-          echo "   kubectl apply -f k8s/deployment.yaml"
-          echo "   kubectl apply -f k8s/service.yaml"
-          echo ""
-          echo "3. Check deployment status:"
-          echo "   kubectl get pods"
-          echo "   kubectl get services"
-          echo ""
-          echo "4. Access the application:"
-          echo "   curl http://localhost:30080/health"
+          echo "Application URL: http://$EXTERNAL_IP"
+          echo "Health check:    http://$EXTERNAL_IP/health"
+          echo "API endpoint:    http://$EXTERNAL_IP/api/tasks"
           echo ""
           echo "============================================="
 
   # ---------------------------------------------------------------------------
   # JOB: DAST Scan (Dynamic Application Security Testing)
   # ---------------------------------------------------------------------------
-  # DAST scans the RUNNING application for security vulnerabilities
-  # Unlike SAST (which scans code), DAST tests the deployed application
-  # ---------------------------------------------------------------------------
   dast-scan:
     name: DAST Security Scan
     runs-on: ubuntu-latest
     needs: deploy
-    # Only run on manual trigger for now (requires running application)
-    if: ${{ github.event_name == 'workflow_dispatch' }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: DAST Scan Placeholder
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GKE_SA_KEY }}
+
+      - name: Setup gcloud and kubectl
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet
+          gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} \
+            --region ${{ env.GKE_REGION }} \
+            --project ${{ env.GCP_PROJECT_ID }}
+
+      - name: Get application URL
+        id: url
+        run: |
+          EXTERNAL_IP=$(kubectl get svc task-api-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          echo "url=http://$EXTERNAL_IP" >> $GITHUB_OUTPUT
+          echo "Application URL: http://$EXTERNAL_IP"
+
+      - name: Run OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          target: ${{ steps.url.outputs.url }}
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
+        continue-on-error: true  # Don't fail pipeline on findings
+
+      - name: DAST Scan Summary
         run: |
           echo "============================================="
-          echo "DAST (Dynamic Application Security Testing)"
+          echo "DAST SCAN COMPLETED"
           echo "============================================="
           echo ""
-          echo "DAST would scan the running application for:"
-          echo "- SQL Injection vulnerabilities"
-          echo "- Cross-Site Scripting (XSS)"
-          echo "- Security misconfigurations"
-          echo "- Authentication issues"
+          echo "OWASP ZAP scanned: ${{ steps.url.outputs.url }}"
           echo ""
-          echo "Common DAST tools:"
-          echo "- OWASP ZAP (Zed Attack Proxy)"
-          echo "- Burp Suite"
-          echo "- Nikto"
-          echo ""
-          echo "For a real DAST scan, you would:"
-          echo "1. Deploy the application to a test environment"
-          echo "2. Run OWASP ZAP against the deployed URL"
-          echo "3. Review and address findings"
-          echo ""
-          echo "Example ZAP command:"
-          echo "  docker run -t owasp/zap2docker-stable zap-baseline.py \\"
-          echo "    -t http://your-app-url/health"
+          echo "Check the 'Security' tab in your repository"
+          echo "for detailed findings."
           echo "============================================="
