--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -87,9 +87,13 @@ jobs:
       # STAGE 4: Install GKE auth plugin and configure kubectl
       # Purpose: Connect kubectl to GKE cluster
       # -----------------------------------------------------------------------
+      - name: Install GKE auth plugin
+        run: |
+          # GitHub Actions uses apt-installed gcloud, so use apt for plugins
+          sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+
       - name: Configure kubectl for GKE
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet
           gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} \
             --region ${{ env.GKE_REGION }} \
             --project ${{ env.GCP_PROJECT_ID }}
@@ -213,9 +217,12 @@ jobs:
         with:
           credentials_json: ${{ secrets.GKE_SA_KEY }}
 
-      - name: Setup gcloud and kubectl
+      - name: Install GKE auth plugin
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet
+          sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+
+      - name: Configure kubectl for GKE
+        run: |
           gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} \
             --region ${{ env.GKE_REGION }} \
             --project ${{ env.GCP_PROJECT_ID }}
