--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -88,9 +88,9 @@ jobs:
       # Purpose: Connect kubectl to GKE cluster
       # -----------------------------------------------------------------------
       - name: Install GKE auth plugin
-        run: |
-          # GitHub Actions uses apt-installed gcloud, so use apt for plugins
-          sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          install_components: 'gke-gcloud-auth-plugin'
 
       - name: Configure kubectl for GKE
         run: |
@@ -218,8 +218,9 @@ jobs:
           credentials_json: ${{ secrets.GKE_SA_KEY }}
 
       - name: Install GKE auth plugin
-        run: |
-          sudo apt-get update && sudo apt-get install -y google-cloud-cli-gke-gcloud-auth-plugin
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          install_components: 'gke-gcloud-auth-plugin'
 
       - name: Configure kubectl for GKE
         run: |
